# extendedmind

./: .bazeliskrc  .bazelrc  .editorconfig  .gitignore  AUTHORS.txt  BUILD  Cargo.toml  LICENCE.txt  NOTICE.txt  README  README.md  THIRD-PARTY.txt  WORKSPACE  buildNumber.properties  cargo-bazel-lock.json  format.bzl  format_test.sh  hypercore_channel_success.txt  lessc.sh  platform_mappings  pom.xml
.github/workflows/: branch-crossbuild.yml  build.yml  crossbuild.yml  release-crossbuild.yml  release.yml  test.yml
api/: pom.xml
backend/: README.md  pom.xml
core/: BUILD  Cargo.toml
core/src/: channel_writer.rs
doc/: APIv2.md  development.md  production.md
e2e/: README.md  deploy-visual-tests.sh  pom.xml  protractor-headless.sh  setup-madoko-test.sh  setupMadokoTest.sh  update-docker.sh
e2e/src/: .jshintrc  package-lock.json  package.json  protractor-headless-conf.js  protractor-live-conf.js
e2e/src/test/: loggedInBasicFunctionalitySpec.js  protractor-headless-conf.js  protractor-live-conf.js  testHelpers.js
engine/: BUILD  Cargo.toml
engine/src/: channel_writer.rs  common.rs  communication.rs  lib.rs  persistence.rs  tcp.rs
frontend/: .project  frontend.sublime-project  pom.xml
frontend/analytics/: pom.xml
frontend/analytics/src/: retention.html
frontend/app/: pom.xml
frontend/app/src/: index.html  index_devel.html  package-lock.json  package.json
frontend/cordova/: README.md  add-plugins.sh  build-android.sh  build-ios.sh  launch-android.sh  pom.xml  prepare-android.sh  prepare-ios.sh  setup-environment.sh  sources-assembly.xml  update-sources.sh
frontend/cordova/scripts/: add-plugins.sh  build-android.sh  build-ios.sh  launch-android.sh  prepare-android.sh  prepare-ios.sh  update-sources.sh
frontend/cordova/src/: package.json
frontend/cordova/templates/: config.xml
frontend/core/: .gitignore  .jshintrc  em.sublime-project  pom.xml
frontend/core/config/: wro-devel.properties  wro.xml
frontend/electron/: README.md  pom.xml
frontend/electron/src/: Gruntfile  Gruntfile.js  packager.json
frontend/electron/templates/: Gruntfile.js  package.json
frontend/nwjs/: pom.xml
frontend/phonegap/: .gitignore  README.md  build-android.sh  build-ios.sh  pom.xml
frontend/phonegap/app/: config.xml
frontend/phonegap/www/: config.xml  index.html
frontend/site/: helm-assembly.xml  pom.xml  sources-assembly.xml
frontend/site/docker/: .gitignore  app-assembly.xml  etc-init-assembly.xml  etc-init.sh  evaluate.htpasswd.toml  frontend-assembly.xml  frontend-data-assembly.xml  nginx-assembly.xml  nginx-conf-assembly.xml  nginx-run.sh  nginx.extendedmind.conf  site-assembly.xml  site-conf-assembly.xml  site-conf-asssembly.xml  site-config.js.tmpl  site-config.js.toml  site-config.json  site-pm2.json  site-run.pl  site-static-assembly.xml  sync-folder-assembly.xml  sync-folder.sh
hub/: BUILD  Cargo.toml  README.md  build-for-openwrt.sh  build-openwrt.sh  run-hub.sh
hub/src/: admin.rs  backup.rs  common.rs  http.rs  hub_hypercore.rs  init.rs  lib.rs  listen.rs  logging.rs  main.rs  metrics.rs  opts.rs  routing.rs  server.rs
hub/src/http/: cache.rs  endpoints.rs  html.rs  websocket.rs
org/troikagame/: LICENCES.txt  NOTICE.txt  productiondata.py  runserver.py  setup.py  testdata.py  troikagame.cfg
org/troikalearning/: LICENCES.txt  NOTICE.txt  messages.pot  runserver.py  setup.py  testdata.py  troikalearning.cfg
schema/: BUILD  Cargo.toml  build.rs
schema/src/: data.capnp  lib.rs  model.capnp  openapi.yaml  schema.capnp  schema.json  ui_protocol.capnp  wire_protocol.capnp
server/: BUILD  Cargo.toml  README.md  pom.xml  run-server.sh
server/src/: admin.rs  common.rs  http.rs  main.rs  metrics.rs  opts.rs  server.rs
server/src/http/: cache.rs  html.rs  serve.rs  websocket.rs
ui/: README.md
ui/android/: .gitignore  BUILD.bazel  build.gradle  settings.gradle
ui/android/app/: .gitignore  build.gradle
ui/android/app/src/main/: AndroidManifest.xml  BUILD.bazel
ui/android/app/src/main/java/org/extendedmind/android/: Application.kt  BUILD.bazel  JNICallback.java  JNICallback.kt  MainActivity.java  MainActivity.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/: MainActivity.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/connect/: Connect.kt  ConnectActivity.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/data/: AppContainer.kt  Result.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/data/content/: ContentRepository.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/data/content/impl/: P2pContentRepository.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/data/preferences/: PreferencesRepository.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/data/preferences/impl/: SharedPreferencesRepository.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/focus/: Focus.kt  FocusViewModel.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/theme/: Theme.kt  Typography.kt
ui/android/app/src/main/java/org/extendedmind/android/ui/utils/: ValidatedPublicKeyState.kt  ValidatedTextFieldState.kt  ValidatedUrlState.kt
ui/android/app/src/main/res/layout/: activity_main.xml
ui/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
ui/android/app/src/main/res/values-night/: colors.xml
ui/android/app/src/main/res/values-v23/: styles.xml
ui/android/gradle/wrapper/: gradle-wrapper.properties
ui/android/jni/: BUILD.bazel  Cargo.toml
ui/android/jni/src/: lib.rs
ui/cli/: BUILD  Cargo.toml  run-cli.sh
ui/cli/src/: main.rs
ui/cli/tests/: cli_integration_test.rs
ui/common/: BUILD  Cargo.toml
ui/common/src/: connect.rs  lib.rs  non_wasm.rs  wasm.rs
ui/disk/: BUILD  Cargo.toml
ui/disk/src/: lib.rs
ui/wasm/: BUILD  Cargo.toml
ui/wasm/src/: lib.rs
ui/web/: .eslintrc.cjs  .gitignore  BUILD  README.md  copyExternalDeps.js  jest-playwright.config.js  jest.bzl  jest.e2e.config.js  package-lock.json  package.json  svelte.config.js  tools.js  tsconfig.json  vite.config.ts  watch-external-deps.sh
(+1540 files in other folders)
