[lib]
path = "src/lib.rs"

[package]
name = "extendedmind_core"
version = "0.0.1"
edition = "2021"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_schema_rust = { path = "../schema" }
peermerge = { git = "https://github.com/extendedmind/peermerge.git", branch = "main", default-features = false, features = ["async-std-runtime"] }
async-std = "1.9.0"
futures = "^0.3.5"
anyhow = "1.0.33"
bytes = "0.5.0"
