[lib]
path = "src/lib.rs"

[package]
name = "extendedmind_engine"
version = "0.1.0"
edition = "2018"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_schema_rust = { path = "../schema" }
automerge = { git = "https://github.com/automerge/automerge-rs.git", rev = "e72571962b51c2f0726fb534890ef3b4f7c74dfc" }
serde_json = "1.0.59"
bytes = "0.5.0"
async-std = "1.9.0"
async-attributes = "1.1.2"
futures = "^0.3.5"
hypercore = { git = "https://github.com/ttiurani/hypercore", rev = "f9cd0fcf190ff892529678e9249197f0b14969d1" }
hypercore-protocol = { git = "https://github.com/ttiurani/hypercore-protocol-rs", rev = "4ef9856762b21e1bcaf1e5ba70d115a3bbbff5e4" }
random-access-storage = { git = "https://github.com/ttiurani/random-access-storage", rev = "16412bab28f8f8d0c4b6b71a25f6646e0910180b" }
random-access-memory = { git = "https://github.com/ttiurani/random-access-memory", rev = "e48f2a9040656724327ae30d12ab636c3bf0a074" }
hex = "0.4"
anyhow = "1.0.28"
log = "0.4.14"
reusable-box-future = "0.2.0"
derivative = "2.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
random-access-disk = { git = "https://github.com/ttiurani/random-access-disk", rev = "6b17771d174722bff442dba9aaf633aae4f3e40f" }
