[package]
name = "extendedmind_hub"
version = "0.0.1"
edition = "2021"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

# TODO: Build following https://blog.dend.ro/building-rust-for-routers/

[dependencies]
extendedmind_engine = { path = "../engine" }
fern = "0.6.0"
log = "0.4.11"
anyhow = "1.0.33"
chrono = { version = "0.4.19" }
futures = "^0.3.5"
async-std = { version = "1.6.2", features = ["unstable"] }
tar = "0.4.38"
flate2 = "1.0.24"
age = { version = "0.8.1", features = ["ssh", "cli-common"] }
lettre = { version = "0.10.0-rc.7", default-features = false, features = ["smtp-transport", "hostname", "builder"] }
async-ctrlc = { version = "1.2.0", features = ["stream", "termination"] }
clap = { version = "3.0.0-rc.5", features = ["derive"] }
thread-priority = "0.8.2"

[features]
default = ["lettre/rustls-tls"]
native-tls = ["lettre/native-tls"]
