[package]
name = "extendedmind_hub"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_core = { path = "../core" }
peermerge-tcp = { git = "https://github.com/extendedmind/peermerge.git", branch = "main", default-features = false, features = ["tokio-runtime", "log"] }
tokio = { version = "1.25.0", features = ["rt"] }
fern = "0.6.0"
log = "0.4.11"
anyhow = "1.0.33"
chrono = { version = "0.4.19" }
futures = "^0.3.5"
tar = "0.4.38"
flate2 = "1.0.24"
age = { version = "0.9.0", features = ["ssh", "cli-common"] }
lettre = { version = "0.10.0-rc.7", default-features = false, features = ["smtp-transport", "hostname", "builder"] }
async-ctrlc = { version = "1.2.0", features = ["stream", "termination"] }
clap = { version = "3.0.0-rc.5", features = ["derive"] }
thread-priority = "0.8.2"

[features]
default = ["lettre/rustls-tls"]
native-tls = ["lettre/native-tls"]
