[package]
name = "extendedmind_server"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

# [dependencies]

[dependencies]
extendedmind_hub = { path = "../hub" }
fern = "0.6.0"
log = "0.4.11"
anyhow = "1.0.33"
chrono = { version = "0.4.19" }
futures = "^0.3.5"
async-std = { version = "1.6.2", features = ["unstable"] }
tide = "0.16.0"
tide-websockets = "0.4.0"
tide-compress = "0.10.2"
tide-rustls = { git = "https://github.com/http-rs/tide-rustls", rev = "cbfb61f519238730b4d6318901fe2f2a8bfdb164" }
tide-acme = { git = "https://github.com/ttiurani/tide-acme", rev = "53c21b421b2443c3c02487b49f3c7f32c64febb0" }
thread-priority = "0.8.2"
serde = "1.0.137"
wildmatch = "2.1.0"
html-escape = "0.2.11"
moka = { version = "0.8.4", default-features = false, features = ["atomic64", "future"] }
async-tungstenite = { version = "0.13.1", features = ["async-std-runtime"] }
async-trait = "0.1.63"
async-ctrlc = { version = "1.2.0", features = ["stream", "termination"] }
clap = { version = "3.0.0-rc.5", features = ["derive"] }
derivative = "2.2.0"
