[package]
name = "extendedmind_server"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_hub = { path = "../hub" }
fern = "0.6.0"
log = "0.4.11"
anyhow = "1.0.33"
chrono = { version = "0.4.19" }
futures = "^0.3.5"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "time", "net", "macros"] }
axum = "0.6.9"
axum-server = "0.4.6"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["compression-br", "compression-deflate", "compression-gzip"] }
mime_guess = "2.0.4"
thread-priority = "0.8.2"
serde = "1.0.137"
wildmatch = "2.1.0"
html-escape = "0.2.11"
moka = { version = "0.8.4", default-features = false, features = ["atomic64", "future"] }
clap = { version = "3.0.0-rc.5", features = ["derive"] }
derivative = "2.2.0"
