# Oldest supported device is Nexus 4 with SDK 21 5.0 Lollipop, released November 13, 2012:
#
#  bazel query --output=build @android_test_support//tools/android/emulated_devices/nexus_4:android_21_arm

android_binary(
    name = "extendedmind_ui_android",
    manifest = "//ui/android/app/src/main:AndroidManifest.xml",
    custom_package = "org.extendedmind.android",
    deps = ["//ui/android/app/src/main/java/org/extendedmind/android:extendedmind_ui_android_lib"],
)
