# Oldest supported device is Nexus 4 with SDK 21 5.0 Lollipop, released November 13, 2012:
#
#  bazel query --output=build @android_test_support//tools/android/emulated_devices/nexus_4:android_21_arm

# Taken from https://github.com/bazelbuild/rules_android/blob/master/android/platforms/BUILD
# rules_kotlin brings an older version of these, and the one change is needed so have them all here
# for now.

platform(
	name = "armeabi_v7a",
	constraint_values = [
		"@platforms//cpu:arm", # <- This is armv7 in upstream
		"@platforms//os:android",
	],
)
platform(
	name = "arm64-v8a",
	constraint_values = [
		"@platforms//cpu:arm64",
		"@platforms//os:android",
	],
)
platform(
	name = "x86",
	constraint_values = [
		"@platforms//cpu:x86_32",
		"@platforms//os:android",
	],
)
platform(
	name = "x86_64",
	constraint_values = [
		"@platforms//cpu:x86_64",
		"@platforms//os:android",
	],
)

android_binary(
    name = "extendedmind_ui_android",
    manifest = "//ui/android/app/src/main:AndroidManifest.xml",
    custom_package = "org.extendedmind.android",
    deps = [
        "//ui/android/jni:extendedmind_ui_android_jni_import",
        "//ui/android/app/src/main/java/org/extendedmind/android:extendedmind_ui_android_lib"
    ],
)
