# Oldest supported device is Nexus 4 with SDK 21 5.0 Lollipop, released November 13, 2012:
#
#  bazel query --output=build @android_test_support//tools/android/emulated_devices/nexus_4:android_21_arm

# Taken from https://github.com/bazelbuild/rules_android/blob/master/android/platforms/BUILD
# rules_kotlin brings an older version of these, and the one change is needed so have them all here
# for now.

platform(
	name = "armeabi_v7a",
	constraint_values = [
		"@platforms//cpu:arm", # <- This is armv7 in upstream
		"@platforms//os:android",
	],
)
platform(
	name = "arm64-v8a",
	constraint_values = [
		"@platforms//cpu:arm64",
		"@platforms//os:android",
	],
)
platform(
	name = "x86",
	constraint_values = [
		"@platforms//cpu:x86_32",
		"@platforms//os:android",
	],
)
platform(
	name = "x86_64",
	constraint_values = [
		"@platforms//cpu:x86_64",
		"@platforms//os:android",
	],
)

######################
# Kotlin setup
#
# https://github.com/bazelbuild/rules_kotlin/tree/master/examples/jetpack_compose

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_compiler_plugin", "kt_kotlinc_options")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_javac_options", "kt_jvm_import")
load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")

# Java Toolchain

default_java_toolchain(
    name = "java_toolchain",
    visibility = ["//visibility:public"],
)

# Kotlin Toolchain

kt_kotlinc_options(
    name = "kt_kotlinc_options",
)

kt_javac_options(
    name = "kt_javac_options",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.6",
    experimental_use_abi_jars = False,
    javac_options = "//ui/android:kt_javac_options",
    jvm_target = "1.8",
    kotlinc_options = "//ui/android:kt_kotlinc_options",
    language_version = "1.6",
)

# Define the compose compiler plugin
kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:androidx_compose_compiler_compiler",
    ],
)

# Add missing 'sun.misc' files to coroutines artifact
# Used in 'override_targets'
kt_jvm_import(
    name = "kotlinx_coroutines_core_jvm",
    jars = ["@maven_secondary//:v1/https/repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-coroutines-core-jvm/1.6.0/kotlinx-coroutines-core-jvm-1.6.0.jar"],
    srcjar = "@maven_secondary//:v1/https/repo1.maven.org/maven2/org/jetbrains/kotlinx/kotlinx-coroutines-core-jvm/1.6.0/kotlinx-coroutines-core-jvm-1.6.0-sources.jar",
    visibility = ["//visibility:public"],
    deps = [
        "//ui/android/stub:sun_misc",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)

#
# Kotlin setup end
######################

android_binary(
    name = "extendedmind_ui_android",
    manifest = "//ui/android/app/src/main:AndroidManifest.xml",
    custom_package = "org.extendedmind.android",
    dex_shards = 5,
    incremental_dexing = 1,
    multidex = "native",
    deps = [
        "//ui/android/jni:extendedmind_ui_android_jni_import",
        "//ui/android/app/src/main/java/org/extendedmind/android:extendedmind_ui_android_lib"
    ],
)
