[package]
name = "extendedmind_cli"
version = "0.1.0"
edition = "2018"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_engine = { path = "../../engine" }
async-tungstenite = { version ="=0.9.3", features = ["async-std-runtime"] }

[dev-dependencies]
duct = "0.13.4"
