[package]
name = "extendedmind_cli"
version = "0.1.0"
edition = "2018"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_engine = { path = "../../engine" }
futures = "^0.3.5"
async-std = "1.9.0"
async-tungstenite = { version = "0.13.1", features = ["async-std-runtime"] }
clap = "3.0.0-beta.4"
log = "0.4.14"

[dev-dependencies]
duct = "0.13.4"
