[package]
name = "extendedmind_cli"
version = "0.0.1"
edition = "2021"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_engine = { path = "../../engine" }
extendedmind_ui_common = { path = "../common" }
futures = "^0.3.5"
async-std = { version = "1.9.0", features = ["unstable"] }
async-tungstenite = { version = "0.13.1", features = ["async-std-runtime"] }
clap = { version = "3.0.0-rc.5", features = ["derive"] }
fern = "0.6.0"
log = "0.4.14"
chrono = { version = "0.4.19" }

[dev-dependencies]
duct = "0.13.4"
