[lib]
path = "src/lib.rs"

[package]
name = "extendedmind_ui_common"
version = "0.0.1"
edition = "2021"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_core = { path = "../../core" }
log = "0.4.14"
wasm-bindgen = "=0.2.78"
wasm-bindgen-futures = "0.4.28"
ws_stream_wasm = "0.7.3"
futures = "^0.3.5"
async-std = "1.9.0"
async-trait = "0.1.63"
js-sys = "0.3.55"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
peermerge-tcp = { git = "https://github.com/extendedmind/peermerge.git", branch = "main", default-features = false, features = ["async-std-runtime"] }
