[lib]
path = "src/lib.rs"

[package]
name = "extendedmind_ui_disk"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_ui_common = { path = "../common" }
log = "0.4.14"
futures = "^0.3.5"
tokio = { version = "1.25.0", features = ["rt"] }
peermerge-tcp = { git = "https://github.com/extendedmind/peermerge.git", branch = "main", default-features = false, features = ["tokio-runtime", "log"] }
