[lib]
path = "src/lib.rs"

[package]
name = "extendedmind_ui_wasm"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_ui_common = { path = "../common" }
log = "0.4.14"
wasm-bindgen = "=0.2.83"
wasm-bindgen-futures = "=0.4.33"
ws_stream_wasm = "0.7.3"
futures = "^0.3.5"
js-sys = "0.3.55"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
