package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_shared_library", "rustfmt_test")

deps = [
    "//ui/common:extendedmind_ui_common",
    "//third_party/cargo:jni"
]

srcs = glob(["src/**"])

rust_shared_library(
    name = "extendedmind_ui_android_jni",
    deps = deps,
    srcs = srcs,
)

cc_import(
    name = "extendedmind_ui_android_jni_import",
    shared_library = ":extendedmind_ui_android_jni",
)

rustfmt_test(
    name = "extendedmind_ui_android_jni_rustfmt_test",
    targets = [":extendedmind_ui_android_jni"],
)
