package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_shared_library", "rustfmt_test")

deps = [
    "//schema:extendedmind_schema_rust",
    "//engine:extendedmind_engine",
    "//ui/common:extendedmind_ui_common",
    "//third_party/cargo:jni",
    "//third_party/cargo:futures",
    "//third_party/cargo:async_std",
    "//third_party/cargo:log",
]

srcs = glob(["src/**"])

rust_shared_library(
    name = "extendedmind_ui_android_jni",
    deps = deps,
    srcs = srcs,
)

cc_import(
    name = "extendedmind_ui_android_jni_import",
    shared_library = ":extendedmind_ui_android_jni",
)
