package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_shared_library", "rustfmt_test")
load("@crate_index//:defs.bzl", "all_crate_deps")

rust_shared_library(
    name = "extendedmind_ui_android_jni",
    deps = [
        "//ui/disk:extendedmind_ui_disk",
    ] + all_crate_deps(),
    srcs = glob(["src/**"]),
)

cc_import(
    name = "extendedmind_ui_android_jni_import",
    shared_library = ":extendedmind_ui_android_jni",
)
