[lib]
path = "src/lib.rs"
crate_type = ["staticlib", "dylib"]

[package]
name = "extendedmind_ui_android_jni"
version = "0.1.0"
edition = "2018"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_ui_common = { path = "../../common" }
jni = "0.19.0"
