[lib]
path = "src/lib.rs"
crate_type = ["staticlib", "dylib"]

[package]
name = "extendedmind_ui_android_jni"
version = "0.1.0"
edition = "2018"
licence = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_engine = { path = "../../../engine" }
extendedmind_ui_common = { path = "../../common" }
futures = "^0.3.5"
async-std = { version = "1.9.0", features = ["unstable"] }
async-tungstenite = { version = "0.13.1", features = ["async-std-runtime"] }
log = "0.4.14"
jni = "0.19.0"
