[lib]
path = "src/lib.rs"
crate_type = ["staticlib", "dylib"]

[package]
name = "extendedmind_ui_android_jni"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-only"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
extendedmind_ui_disk = { path = "../../disk" }
futures = "^0.3.5"
tokio = { version = "1.25.0", features = ["rt"] }
log = "0.4.14"
jni = "0.19.0"
