package(
    default_visibility = ["//ui:__subpackages__"],
)

android_library(
    name = "extendedmind_ui_android_lib",
    srcs = [
        "MainActivity.java",
        "JNICallback.java",
    ],
    manifest = "//ui/android/app/src/main:AndroidManifest.xml",
    resource_files = ["//ui/android/app/src/main:res"],
    deps = [
        "//ui/android/jni:extendedmind_ui_android_jni_import",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
    ],
)
