package(
    default_visibility = ["//ui:__subpackages__"],
)
load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "extendedmind_ui_android_lib",
    srcs = glob(["**/*.kt"]),
    manifest = "//ui/android/app/src/main:AndroidManifest.xml",
    resource_files = ["//ui/android/app/src/main:res"],
    deps = [
        "//schema:extendedmind_schema_capnp_java_lib",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
    ],
)
